--- a/index.html
+++ b/index.html
@@ -1,77 +1,36 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Age Detector</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.8.5"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ageflix</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="text-align:center; font-family: sans-serif;">
+<body>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">Ageflix</div>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="#movies">Movies</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 
-  <h1>👶🧑‍🦳 تحديد الفئة العمرية</h1>
-  <button type="button" onclick="init()">تشغيل الكاميرا</button>
-  <div id="webcam-container"></div>
-  <div id="label-container"></div>
+  <!-- Main Section -->
+  <section class="main">
+    <h1>Welcome to Ageflix</h1>
+    <p>Detect your age group and get personalized movie recommendations!</p>
+    
+    <!-- Teachable Machine Embed -->
+    <div class="tm-container">
+      <iframe src="https://teachablemachine.withgoogle.com/models/UujRQ_OS4/"
+              width="100%" height="500" frameborder="0" allowfullscreen>
+      </iframe>
+    </div>
+  </section>
 
-  <script type="text/javascript">
-    const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-
-    let model, webcam, labelContainer, maxPredictions;
-
-    async function init() {
-      const modelURL = URL + "model.json";
-      const metadataURL = URL + "metadata.json";
-
-      // تحميل النموذج
-      model = await tmImage.load(modelURL, metadataURL);
-      maxPredictions = model.getTotalClasses();
-
-      // إعداد الكاميرا
-      const flip = true;
-      webcam = new tmImage.Webcam(200, 200, flip);
-      await webcam.setup();
-      await webcam.play();
-      window.requestAnimationFrame(loop);
-
-      document.getElementById("webcam-container").appendChild(webcam.canvas);
-      labelContainer = document.getElementById("label-container");
-      for (let i = 0; i < maxPredictions; i++) {
-        labelContainer.appendChild(document.createElement("div"));
-      }
-    }
-
-    async function loop() {
-      webcam.update();
-      await predict();
-      window.requestAnimationFrame(loop);
-    }
-
-    async function predict() {
-      const prediction = await model.predict(webcam.canvas);
-      let highestClass = "";
-      let highestProb = 0;
-
-      for (let i = 0; i < prediction.length; i++) {
-        if (prediction[i].probability > highestProb) {
-          highestProb = prediction[i].probability;
-          highestClass = prediction[i].className;
-        }
-      }
-
-      labelContainer.innerHTML = "تم التعرّف: " + highestClass;
-
-      // الانتقال حسب الفئة
-      if (highestProb > 0.9) { // ثقة عالية
-        if (highestClass === "kid") {
-          window.location.href = "movies_kid.html";
-        } else if (highestClass === "adult") {
-          window.location.href = "movies_adult.html";
-        } else if (highestClass === "senior") {
-          window.location.href = "movies_senior.html";
-        }
-      }
-    }
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
