--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ageflix</title>
+  <meta charset="UTF-8">
+  <title>Ageflix - Home</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 </head>
 <body>
-  <nav class="navbar">
-    <div class="logo">Ageflix</div>
-    <ul>
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="movies-kid.html">Kid</a>
+    <a href="movies-adult.html">Adult</a>
+    <a href="movies-senior.html">Senior</a>
+    <a href="about.html">About</a>
   </nav>
 
-  <section class="main">
+  <header>
     <h1>Welcome to Ageflix</h1>
-    <p>AI-powered movie recommendations based on your age group!</p>
+    <input type="text" id="searchInput" placeholder="Search for movies...">
+  </header>
 
-    <div class="camera">
-      <video id="webcam" autoplay playsinline width="300" height="225"></video>
-      <p id="label">Loading model...</p>
-    </div>
+  <section id="moviesContainer" class="movies-grid">
+    <!-- الأفلام رح تظهر هنا -->
   </section>
 
   <script src="script.js"></script>
