--- a/index.html
+++ b/index.html
@@ -2,25 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Ageflix - Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ageflix</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 </head>
 <body>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="movies-kid.html">Kid</a>
-    <a href="movies-adult.html">Adult</a>
-    <a href="movies-senior.html">Senior</a>
-    <a href="about.html">About</a>
+  <nav class="navbar">
+    <div class="logo">Ageflix</div>
+    <ul>
+      <li><a href="index.html" class="active">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
   </nav>
 
-  <header>
+  <section class="main">
     <h1>Welcome to Ageflix</h1>
-    <input type="text" id="searchInput" placeholder="Search for movies...">
-  </header>
+    <p>AI-powered movie recommendations based on your age group!</p>
 
-  <section id="moviesContainer" class="movies-grid">
-    <!-- الأفلام رح تظهر هنا -->
+    <div class="camera">
+      <video id="webcam" autoplay playsinline width="300" height="225"></video>
+      <p id="label">Loading model...</p>
+    </div>
   </section>
 
   <script src="script.js"></script>
