--- a/about.html.html
+++ b/about.html.html
@@ -27,7 +27,7 @@
       border-radius: 10px;
       width: 320px;
       height: 240px;
-      margin-bottom: 20px;
+      margin-top: 20px;
     }
 
     #label-container {
@@ -47,21 +47,41 @@
     @keyframes blink {
       50% { opacity: 0.5; }
     }
+
+    #startButton {
+      background-color: #e50914;
+      color: #fff;
+      padding: 15px 40px;
+      border: none;
+      border-radius: 4px;
+      font-size: 18px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    #startButton:hover {
+      background-color: #b00610;
+    }
   </style>
 </head>
 <body>
-  <h1>Detecting your age group...</h1>
-  <video id="webcam" autoplay playsinline></video>
+  <h1>Welcome to AgeFlix</h1>
+  <p>Click the button below to start camera and detect your age group.</p>
+
+  <button id="startButton" onclick="init()">Start Camera</button>
+  <video id="webcam" autoplay playsinline style="display:none;"></video>
   <div id="label-container"></div>
   <div id="loading">Loading your movies...</div>
 
   <script type="text/javascript">
     const URL = "https://teachablemachine.withgoogle.com/models/UujRQ_OS4/";
-
     let model, webcam, labelContainer, maxPredictions;
     let detected = false;
 
     async function init() {
+      document.getElementById("startButton").style.display = "none";
+      document.getElementById("label-container").innerHTML = "Initializing camera...";
+
       const modelURL = URL + "model.json";
       const metadataURL = URL + "metadata.json";
 
@@ -70,12 +90,23 @@
 
       const flip = true;
       webcam = new tmImage.Webcam(320, 240, flip);
-      await webcam.setup();
-      await webcam.play();
-      window.requestAnimationFrame(loop);
 
-      document.getElementById("webcam").replaceWith(webcam.canvas);
-      labelContainer = document.getElementById("label-container");
+      try {
+        await webcam.setup(); // يطلب إذن الكاميرا
+        await webcam.play();
+        window.requestAnimationFrame(loop);
+
+        const videoElement = document.getElementById("webcam");
+        videoElement.style.display = "block";
+        videoElement.parentNode.replaceChild(webcam.canvas, videoElement);
+
+        labelContainer = document.getElementById("label-container");
+        labelContainer.innerHTML = "Detecting...";
+      } catch (error) {
+        alert("Please allow camera access to continue.");
+        document.getElementById("startButton").style.display = "block";
+        document.getElementById("label-container").innerHTML = "";
+      }
     }
 
     async function loop() {
@@ -97,7 +128,6 @@
       const label = highest.className;
       labelContainer.innerHTML = `You are: <span style="color:#e50914">${label}</span>`;
 
-      // لما تكون الثقة عالية، نعرض تحميل ثم نحول
       if (highest.probability > 0.90 && !detected) {
         detected = true;
         showLoading(label);
@@ -106,7 +136,7 @@
 
     function showLoading(label) {
       document.getElementById("loading").style.display = "block";
-
+      labelContainer.innerHTML = "";
       setTimeout(() => {
         if (label === "Kid") {
           window.location.href = "kids.html";
@@ -120,8 +150,6 @@
         }
       }, 2500);
     }
-
-    init();
   </script>
 </body>
 </html>
